# minecraft-test-chambers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  minecraft_server.py  pyproject.toml  world_config.yaml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
minecraft_recorder/: __init__.py  __main__.py  episode_viewer.html  episode_writer.py  screenshot_capture.py  server.py  tool_definitions.py
minecraft_test_chambers/: __init__.py  chamber_loader.py
minecraft_test_chambers/chambers/: deep_dark_heist.yaml  end_gateway_sprint.yaml  end_island.yaml  forest_day.yaml  frozen_outpost.yaml  hostile_night.yaml  jungle_ruins.yaml  mansion_ambush.yaml  mineshaft_collapse.yaml  nether_remnant.yaml  plains_day.yaml  rain_forest.yaml  village_assault.yaml
minecraft_test_chambers/generators/: __init__.py  base.py  cave.py  chamber_room.py  environment.py  mob.py  ore.py  structure.py  tree.py
recorder_plugin/: pom.xml
recorder_plugin/src/main/java/com/minecraftrecorder/: EpisodeWriter.java  ObsSnapshot.java  PlayerRecorderListener.java  RecorderPlugin.java
recorder_plugin/src/main/resources/: plugin.yml
test_chambers/: aperture_relay.yaml  dark_heist.yaml  deep_mine.yaml  desert_day.yaml  desert_tomb.yaml  end_gateway_sprint.yaml  end_island.yaml  forest_day.yaml  frozen_outpost.yaml  hostile_night.yaml  ice_tundra.yaml  jungle_ruins.yaml  mansion_ambush.yaml  mineshaft_collapse.yaml  mirror_protocol.yaml  nether_fortress_raid.yaml  nether_remnant.yaml  open_plains.yaml  plains_day.yaml  rain_forest.yaml  spider_cave.yaml  sunken_shipwreck.yaml  swamp_night.yaml  village_assault.yaml  volcano_escape.yaml
tests/: test_chamber_loader.py  test_generators.py
