[project]
name = "minecraft-test-chambers"
version = "0.1.0"
description = "Minecraft Portal-inspired test chamber generator"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
recorder = [
    "anthropic>=0.25",
    "mss>=9.0",                                               # full-screen fallback + region capture
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'", # macOS game-window detection
    "pywin32>=306; sys_platform == 'win32'",                  # Windows game-window detection
    # Linux: uses xdotool subprocess — no extra Python dep required
]

[tool.setuptools.packages.find]
include = ["minecraft_test_chambers*", "minecraft_recorder*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
