[project]
name = "minecraft-test-chambers"
version = "0.2.0"
description = "Procedurally-generated Minecraft test chambers for recording human playthroughs as JSONL training data for LLM fine-tuning"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Alex Sabaka", email = "alex.love.broadcast@gmail.com"},
]
keywords = [
    "minecraft",
    "reinforcement-learning",
    "dataset",
    "recording",
    "procedural-generation",
    "llm",
    "fine-tuning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/AlexSabaka/minecraft-test-chambers"

[project.scripts]
minecraft-recorder = "minecraft_recorder.__main__:main"
minecraft-server   = "minecraft_recorder.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
recorder = [
    "anthropic>=0.25",
    "mss>=9.0",                                               # full-screen fallback + region capture
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'", # macOS game-window detection
    "pywin32>=306; sys_platform == 'win32'",                  # Windows game-window detection
    # Linux: uses xdotool subprocess — no extra Python dep required
]

[tool.setuptools.packages.find]
include = ["minecraft_test_chambers*", "minecraft_recorder*"]

[tool.setuptools.package-data]
minecraft_test_chambers = ["chambers/*.yaml"]
minecraft_recorder      = ["world_config.yaml", "episode_viewer.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
